added support for BibTeX entrytype "dataset"

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1710,8 +1710,10 @@ post.resource.entrytype.collection                      =
 post.resource.entrytype.collection.description          = A book without a specific author, containing different articles of different authors, where a publisher is given
 post.resource.entrytype.conference                      = conference*
 post.resource.entrytype.conference.description          = A contribution to a conference that did not appear in the proceedings
+post.resource.entrytype.dataset                         = dataset*
+post.resource.entrytype.dataset.description             = A dataset
 post.resource.entrytype.description                     = The entry type of the publication.
-post.resource.entrytype.electronic                      = eletronic*
+post.resource.entrytype.electronic                      = electronic*
 post.resource.entrytype.electronic.description          = An electronic publication (e.g., a blog post)
 post.resource.entrytype.help                            = <dl class="dl-horizontal">\n<dt>article</dt>\n<dd>An article from a scientific journal.</dd>\n<dt>book</dt>\n<dd>A book with an explicit publisher.</dd>\n<dt>booklet</dt>\n<dd>A work that is printed and bound, but without a named publisher or sponsoring institution.</dd>\n<dt>conference*</dt>\n<dd>A contribution to a conference that did not appear in the proceedings.</dd>\n<dt>electronic*</dt>\n<dd>An electronic publication (e.g., a blog post).</dd>\n<dt>inbook</dt>\n<dd>A part of a book (e.g., a chapter or a page range).</dd>\n<dt>incollection</dt>\n<dd>A part of a book with a separate title.</dd>\n<dt>inproceedings</dt>\n<dd>An article in the conference proceedings.</dd>\n<dt>manual</dt>\n<dd>A technical documentation.</dd>\n<dt>mastersthesis</dt>\n<dd>A bachelor or master's thesis (a more precise specification is possible with the "type" field).</dd>\n<dt>misc</dt>\n<dd>An entry type for publications that do not fit into the other types.</dd>\n<dt>patent*</dt>\n<dd>A patent.</dd>\n<dt>periodical*</dt>\n<dd>A regularly appearing published work (e.g., a newspaper).</dd>\n<dt>phdthesis</dt>\n<dd>A dissertation.</dd>\n<dt>preamble*</dt>\n<dd>An introductory statement.</dd>\n<dt>presentation*</dt>\n<dd>A talk at an event.</dd>\n<dt>proceedings</dt>\n<dd>A collection of papers published at a conference.</dd>\n<dt>standard*</dt>\n<dd>A technical standard (e.g., ISO/IETF).</dd>\n<dt>techreport</dt>\n<dd>A work published by a university or other institution; typically a numbered work in a series.</dd>\n<dt>unpublished</dt>\n<dd>A work with an author and title that has not been published.</dd>\n</dl>
 post.resource.entrytype.help.title                      = The type of the publication (non-standard types are marked with an asterisk)
@@ -2062,6 +2064,7 @@ reporting.publication.type.article       = article
 reporting.publication.type.book          = book
 reporting.publication.type.booklet       = booklet
 reporting.publication.type.conference    = scientific conference
+reporting.publication.type.dataset       = dataset
 reporting.publication.type.electronic    = electronic
 reporting.publication.type.inbook        = inbook
 reporting.publication.type.incollection  = incollection
