--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1696,6 +1696,8 @@ post.resource.entrytype.collection                      =
 post.resource.entrytype.collection.description          = Ein Buch ohne allgemeinen Autor, mit mehreren Beitr\u00E4gen verschiedener Autoren, das einen Herausgeber hat
 post.resource.entrytype.conference                      = Konferenz*
 post.resource.entrytype.conference.description          = Ein Konferenzbeitrag der nicht im Tagungsband ver\u00F6ffentlich wurde
+post.resource.entrytype.dataset                         = Datensatz*
+post.resource.entrytype.dataset.description             = Ein Datensatz
 post.resource.entrytype.description                     = Eintragstyp der Ver\u00F6ffentlichung.
 post.resource.entrytype.electronic                      = eletronic*
 post.resource.entrytype.electronic.description          = Eine digitale Publikation (z.B. ein Beitrag auf einem Blog)
@@ -2047,6 +2049,7 @@ reporting.publication.type.article       = Zeitungs- oder Zeitschriftenartikel
 reporting.publication.type.book          = Buch
 reporting.publication.type.booklet       = Gebundenes Druckwerk
 reporting.publication.type.conference    = Wissenschaftliche Konferenz
+reporting.publication.type.dataset       = Datensatz
 reporting.publication.type.electronic    = Elektronisch
 reporting.publication.type.inbook        = Teil eines Buches
 reporting.publication.type.incollection  = Teil eines Buches mit eigenem Titel
