--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -1515,6 +1515,8 @@ post.resource.entrytype.collection                      =
 post.resource.entrytype.collection.description          = 
 post.resource.entrytype.conference                      = \u043A\u043E\u043D\u0444\u0435\u0440\u0435\u043D\u0446\u0438\u044F*
 post.resource.entrytype.conference.description          = \u0420\u0430\u0431\u043E\u0442\u0430 \u043D\u0430 \u043A\u043E\u043D\u0444\u0435\u0440\u0435\u043D\u0446\u0438\u0438, \u043A\u043E\u0442\u043E\u0440\u0430\u044F \u043D\u0435 \u0432\u043A\u043B\u044E\u0447\u0435\u043D\u0430 \u0432 \u0441\u0431\u043E\u0440\u043D\u0438\u043A
+post.resource.entrytype.dataset                         = 
+post.resource.entrytype.dataset.description             = 
 post.resource.entrytype.description                     = 
 post.resource.entrytype.electronic                      = \u044D\u043B\u0435\u043A\u0442\u0440\u043E\u043D\u043D\u044B\u0439*
 post.resource.entrytype.electronic.description          = \u0426\u0438\u0444\u0440\u043E\u0432\u0430\u044F \u043F\u0443\u0431\u043B\u0438\u043A\u0430\u0446\u0438\u044F (\u043D\u0430\u043F\u0440\u0438\u043C\u0435\u0440, \u0437\u0430\u043F\u0438\u0441\u044C \u0432 \u0431\u043B\u043E\u0433\u0435)
@@ -1850,6 +1852,7 @@ reporting.publication.type.article       = \u0441\u0442\u0430\u0442\u044C\u044F
 reporting.publication.type.book          = \u043A\u043D\u0438\u0433\u0430
 reporting.publication.type.booklet       = \u0431\u0443\u043A\u043B\u0435\u0442
 reporting.publication.type.conference    = \u043D\u0430\u0443\u0447\u043D\u0430\u044F \u043A\u043E\u043D\u0444\u0435\u0440\u0435\u043D\u0446\u0438\u044F
+reporting.publication.type.dataset       = 
 reporting.publication.type.electronic    = \u044D\u043B\u0435\u043A\u0442\u0440\u043E\u043D\u043D\u043E\u0435
 reporting.publication.type.inbook        = \u0447\u0430\u0441\u0442\u044C \u043A\u043D\u0438\u0433\u0438
 reporting.publication.type.incollection  = \u0447\u0430\u0441\u0442\u044C \u043A\u043D\u0438\u0433\u0438 \u0441 \u0441\u043E\u0431\u0441\u0442\u0432\u0435\u043D\u043D\u044B\u043C \u0437\u0430\u0433\u043E\u043B\u043E\u0432\u043A\u043E\u043C
