Added researchid stuff

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1433,6 +1433,7 @@ person.show.newThesisButton                       = New thesis
 person.show.noNamesFound                          = No names found
 person.show.noResourcesFound                      = No resources found
 person.show.orcidId                               = OrcidID
+person.show.researcherId                          = ResearcherID
 person.show.other                                 = Other
 person.show.otherPub                              = Other Publications
 person.show.otherPubOfSimilarAuthor               = Other Publications of same named Authors
