--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1420,6 +1420,7 @@ person.show.newThesisButton                       = Neue Abschlussarbeit
 person.show.noNamesFound                          = Keine Namen gefunden
 person.show.noResourcesFound                      = Keine Resourcen gefunden
 person.show.orcidId                               = OrcidID
+person.show.researcherId                          = ResearcherID
 person.show.other                                 = Sonstige
 person.show.otherPub                              = Andere Publikationen
 person.show.otherPubOfSimilarAuthor               = Andere Publikationen gleichnamiger Autoren
