Finalizing researcher id

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1390,7 +1390,7 @@ person.show.MrevTooltip                           = Further reviewer
 person.show.Mths                                  = Advisor
 person.show.Mths.of                               = , advisor of
 person.show.MthsTooltip                           = Person that mainly guided the doctoral candidate
-person.show.TooltipLockedForm                     = This field can onyl be edited, if you are this person and claimed it.
+person.show.TooltipLockedForm                     = This field can only be edited, if you are this person and claimed it.
 person.show.academicDegree                        = Academic degree
 person.show.addAlternateNameButton                = Add alternative name
 person.show.addNameButton                         = Add name
@@ -1406,7 +1406,7 @@ person.show.deleteNameButton                      = Remove name
 person.show.deleteRoleButton                      = Delete role
 person.show.editRoleButton                        = Edit roles
 person.show.email                                 = e-mail
-person.show.email.placeholder                     = example@domain.com
+person.show.email.placeholder                     = example@example.com
 person.show.error.addRoleFailed                   = Adding the role has failed.
 person.show.error.alreadyAssigned                 = "{0}" of "{1}" has already been associated to the person "<a href="{2}">{3}</a>". Please check the associations. Maybe the same person is accounted several times in the system.
 person.show.firstReviewer                         = First reviewer
